--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
-        <script src="script.js"></script>
+        <link rel="icon" type="image/x-icon" href="favicon.png">
     </head>
     <body class = "main">
         <h1 class = "header">how many fucking slug points should i have?</h1>
@@ -11,7 +11,7 @@
         <script src="date.js"></script>
         <p class = "par">let's be real, you have too many fucking slug points. you need to know how much you need to get rid of. this is the website for you!</p>
         <div>
-            <button onclick = "second.html">Banana</button>
+            <button>Banana</button>
             <button>Gold</button>
             <button>Blue</button>
         </div>
