--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <h2>on...</h2>
         <p id = "date"></p>
         <script src="date.js"></script>
+        <script src="points.js"></script>
         <p class = "par">let's be real, you have too many fucking slug points. you need to know how much you need to get rid of. this is the website for you!</p>
         <div>
             <button onclick = "second.html">Banana</button>
