--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
         <link rel="icon" type="image/x-icon" href="favicon.png">
     </head>
     <body class = "main">
-        <h1 class = "header">how many fucking slug points should i have?</h1>
+        <h1 class = "header" style="padding: 0 0 0 0">how many fucking slug points should i have?</h1>
         <!--<h2>on...</h2> -->
         <p id = "date"></p>
         <script src="date.js"></script>
         <script src="points.js"></script>
-        <p class = "par">let's be real, you have too many fucking slug points. you need to know how much you need to get rid of. this is the website for you!</p>
+        <p class = "par">if you have no fucking clue how many slug points you need to get rid of. this is the website for you!</p>
         <div>
             <button>Banana</button>
             <button>Gold</button>
