--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!--<h2>on...</h2> -->
         <p id = "date"></p>
         <script src="date.js"></script>
-        <script src="points.js"></script>
+        <script src="daysleft.js"></script>
         <p class = "par">if you have no fucking clue how many slug points you need to get rid of. this is the website for you!</p>
         <div>
             <button>Banana</button>
