--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
         <link rel="icon" type="image/x-icon" href="favicon.png">
     </head>
     <body class = "main">
-        <h1 class = "header" style="padding: 0 0 0 0">how many fucking slug points should i have?</h1>
-        <!--<h2>on...</h2> -->
+        <h1 class = "header" style="padding: 0 0 0 0">how many slug points should i have?</h1>
         <p id = "date"></p>
         <script src="date.js"></script>
+        <p>days left in the quarter...</p>
         <script src="daysleft.js"></script>
-        <p class = "par">if you have no fucking clue how many slug points you need to get rid of. this is the website for you!</p>
+        <p class = "par">if you have no clue how many slug points you need to spend...</p>
+        <p class = "par">this is the website for you!</p>
         <div>
-            <button>Banana</button>
-            <button>Gold</button>
-            <button>Blue</button>
+            <button class = "banana">banana</button>
+            <button class = "gold">gold</button>
+            <button class = "blue">blue</button>
         </div>
     </body>
 </html>
