--- a/index.html
+++ b/index.html
@@ -12,10 +12,35 @@
         <script src="daysleft.js"></script>
         <p class = "par">if you have no clue how many slug points you need to spend...</p>
         <p class = "par2">this is the website for you!</p>
+        <h3>choose your mealplan</h3>
         <div>
             <button class = "banana">banana</button>
             <button class = "gold">gold</button>
             <button class = "blue">blue</button>
         </div>
+        <h1></h1>
+        <h1></h1>
+        <h1></h1>
+        <h1></h1>
+        <h1></h1>
+        <h1></h1>
+        <h1></h1>
+        <h1></h1>
+        <h1></h1>
+        <h1></h1>
+        <h1></h1>
+        <h1></h1>
+        <h1></h1>
+        <h1></h1>
+        <h1></h1>
+        <h1></h1>
+        <h1 class = "footer">Inspired by the website howmanyfuckingswipesshouldihave.com, 
+            which calculates the number of swipes a UCLA student needs to finish before the end of the quarter, 
+            we created 'how many slugpoints should i have', slugpoints.tech, to address a similar issue at UCSC. 
+            During the final week of last quarter, we saw students frantically trying to use up their 
+            non-refundable points before the quarter ended. Dining hall swipes were being passed around like hotcakes, 
+            campus markets and cafes sold out before they even opened, and cases of Yerba Mate's were seen around campus at record numbers. 
+            Students were scrambling to get rid of hundreds of dollars worth of meal swipes. We created this website to help save UCSC students' 
+            time and money, while also providing comedic comments.</h1>
     </body>
 </html>
