--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>slug points</title>
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/x-icon" href="favicon.png">
     </head>
     <body class = "main">
         <h1 class = "header" style="padding: 0 0 0 0">how many fucking slug points should i have?</h1>
-        <!--<h2>on...</h2> -->
         <p id = "date"></p>
         <script src="date.js"></script>
         <script src="daysleft.js"></script>
         <p class = "par">if you have no fucking clue how many slug points you need to get rid of. this is the website for you!</p>
-        <div>
-            <button>Banana</button>
+        </script>
             <button>Gold</button>
             <button>Blue</button>
         </div>
