--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h1></h1>
         <h1></h1>
         <h1></h1>
-        <h1 class = "footer">Inspired by the website howmanyfuckingswipesshouldihave.com, 
+        <h1 class = "footer">Created during Cruzhacks 2023... Inspired by the website howmanyfuckingswipesshouldihave.com, 
             which calculates the number of swipes a UCLA student needs to finish before the end of the quarter, 
             we created 'how many slugpoints should i have', slugpoints.tech, to address a similar issue at UCSC. 
             During the final week of last quarter, we saw students frantically trying to use up their 
