--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/x-icon" href="favicon.png">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body class = "main">
         <h1 class = "header" style="padding: 0 0 0 0">how many slug points should i have?</h1>
