--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
         <p class = "par2">this is the website for you!</p>
         <h3>choose your mealplan</h3>
         <div>
-            <button class = "banana">banana</button>
-            <button class = "gold">gold</button>
-            <button class = "blue">blue</button>
+            <script src="button.js"></script>
+            <button class = "banana" onclick = "display(1)">banana</button>
+            <button class = "gold" onclick = "display(2)">gold</button>
+            <button class = "blue" onclick = "display(3)">blue</button>
+            <p id="show"></p>
         </div>
         <h1></h1>
         <h1></h1>
