buttons display correct numbers

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
         <!--<h2>on...</h2> -->
         <p id = "date"></p>
         <script src="date.js"></script>
-        <script src="daysleft.js"></script>
+        <p id = "daysleft"></p>
+        <script src="thingsleft.js"></script>
         <p class = "par">if you have no clue how many slug points you need to spend...</p>
         <p class = "par2">this is the website for you!</p>
         <h3>choose your mealplan</h3>
         <div>
-            <script src="button.js"></script>
+            <script src="thingsleft.js"></script>
             <button class = "banana" onclick = "display(1)">banana</button>
             <button class = "gold" onclick = "display(2)">gold</button>
             <button class = "blue" onclick = "display(3)">blue</button>
