i think we're done here

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body class = "main">
-        <h1 class = "header" style="padding: 0 0 0 0">how many fucking slug points should i have?</h1>
+        <h1 class = "header" style="padding: 0 0 0 0">how many slug points should i have?</h1>
         <!--<h2>on...</h2> -->
         <p id = "date"></p>
         <script src="date.js"></script>
@@ -21,7 +21,7 @@
             <button class = "banana" onclick = "display(1)">banana</button>
             <button class = "gold" onclick = "display(2)">gold</button>
             <button class = "blue" onclick = "display(3)">blue</button>
-            <p id="show"></p>
+            <p id="show" class = "header"></p>
         </div>
         <h1></h1>
         <h1></h1>
@@ -42,9 +42,7 @@
         <h1></h1>
         <h1></h1>
         <h1></h1>
-        <h1></h1>
-        <h1></h1>
-        <h1 class = "footer">Created during Cruzhacks 2023... Inspired by the website howmanyfuckingswipesshouldihave.com, 
+        <h1 class = "footer">Created during Cruzhacks 2023... Inspired by the website howmanyf*ckingswipesshouldihave.com, 
             which calculates the number of swipes a UCLA student needs to finish before the end of the quarter, 
             we created 'how many slugpoints should i have', slugpoints.tech, to address a similar issue at UCSC. 
             During the final week of last quarter, we saw students frantically trying to use up their 
