--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body class = "main">
-        <h1 class = "header" style="padding: 0 0 0 0">how many slug points should i have?</h1>
+        <h1 class = "header" style="padding: 0 0 0 0">how many fucking slug points should i have?</h1>
         <!--<h2>on...</h2> -->
         <p id = "date"></p>
         <script src="date.js"></script>
