--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <button class = "banana" onclick = "display(1)">banana</button>
             <button class = "gold" onclick = "display(2)">gold</button>
             <button class = "blue" onclick = "display(3)">blue</button>
-            <p id="show" class = "header"></p>
+            <p id="show" class = "number"></p>
         </div>
         <h1></h1>
         <h1></h1>
